[Added]Delete company, Email validation, Zipcode modification
1. Delete company method along with testcases
2. Added city and state fields to the company table
3. Updated city and state according to zipcode and added testcases
4. Added email validator
5. Added required translations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,10 @@
 
 en:
   hello: "Hello world"
+  confirm: "Are you sure you want to delete this company? It will be permanently deleted."
+  saved: Saved
+  changes_saved: Changes Saved
+  company_deleted_successfully: Company deleted successfully
+  error:
+    email_err: "is not a valid email format, valid format is: company@getmainstreet.com"
+    zip_code: "should be a valid 5 digit US zip code"
